--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <header>
-               <img src="img/horizontal_logo_color.png" alt="logo" height="120px">
+               <img src="horizontal_logo_color.png" alt="logo" height="120px">
         </header>
 
             <nav>
@@ -31,7 +31,7 @@
 
         <main>
             <section>
-               <img class=pic src="img/top-banner.png" alt="top banner" height="500px">
+               <img class=pic src="top-banner.png" alt="top banner" height="500px">
             </section>
 
             <section>
@@ -42,7 +42,7 @@
 
             <section>
                 <div>
-                    <img class=pic src="img/special-offers.png" alt="special offers" weight="500px">
+                    <img class=pic src="special-offers.png" alt="special offers" weight="500px">
                 <article class="thumbnail">
                     <h1>Special Offers</h1>
                     <p>
@@ -57,7 +57,7 @@
                 <br>
 
                 <div>
-                    <img class=pic src="img/book.png" alt="book a table" weight="500px">
+                    <img class=pic src="book.png" alt="book a table" weight="500px">
                 <article class="thumbnail">
                     <h1>Book a Table</h1>
                     <p>
@@ -70,7 +70,7 @@
                 <br>
 
                 <div>
-                    <img class=pic src="img/opening-times.png" alt="opening times" weight="500px">
+                    <img class=pic src="opening-times.png" alt="opening times" weight="500px">
                 <article class="thumbnail">
                     <h1>Opening Times</h1>
                     <p>
@@ -87,7 +87,7 @@
 
         <footer>
              <div class="flex-container">
-                        <div class="flex-item-left"><img src="img/horizontal_logo_white.png" alt="logo" height="50px">
+                        <div class="flex-item-left"><img src="horizontal_logo_white.png" alt="logo" height="50px">
                             <p>
                             +1 312-828-9800
                             <br>
